# cpp_practice

./: CMakeLists.txt  CMakeUserPresets.json  README.md  clean_build.ps1  main.cpp  run_cmake.ps1
libraries/: CMakeLists.txt
libraries/include/: leetcode.h
libraries/src/: leetcode.cpp
mytest/: CMakeLists.txt
mytest/src/: leetcode_no1.cpp
src/: leetcode_no1.cpp
